More attempted fixes for overflow

--- a/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_images.scss
+++ b/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_images.scss
@@ -12,7 +12,7 @@
             height: 100%;
             max-height: -moz-available; /* WebKit-based browsers will ignore this. */
             max-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-            max-height: fill-available;
+            max-height: stretch;
         }
 
 
